2011-12-09  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* using column in evar window
	* new color for partially instantiated evar's
	* new config file version 03
	* use colors in evar window
	* update configuration in evar window

2011-12-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix -w Ae warnings
	* use an existential hash in the proof-tree record and
	  link dependencies for instantiated existentials

2011-12-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* more documentation
	* move to coq trunk
	  - protocol change: current-goals gets the complete evar
	    info as string, which is parsed inside prooftree
	  - added coq specific evar info parser
	* new option -config

2011-12-06  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* abandon coq patches, work with coq trunk now (elisp only)
	  Many thanks to Arnaud Spiwack for his dependent evar patch!

	* use match-string-no-properties instead of
	  buffer-substring-no-properties (elisp only)

2011-11-01  Hendrik Tews <prooftree@askra.de>

	* release version 0.7 on 2011-11-01 13:23:57 UTC

2011-11-01  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2011-11-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* notebook for configuration

2011-11-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* help text / man page for existential dialog

2011-11-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix state-number simplification from 2011-09-27

2011-11-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix clone existentials bug

2011-10-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* existential variable window/dialog
	* fix rounding bug with width and subtree_width

2011-10-24  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* some more doc strings

2011-10-22  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* use a different color for proved branches with
	  non-instantiated existential variables
	* some more doc strings

2011-10-20  Hendrik Tews  <tews@os.inf.tu-dresden.de>
